<resources>
    <string name="app_name">Tezzo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_sign_in_avtivity">SignInAvtivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="termsAndConditions">By Clicking the button you agree to the \n <u>Terms and Condition</u> of trezo</string>
    <string name="packageName">com.pinkfry.tech.tezzo</string>
    <string name="getStartedHeading">Manage your gym \nin easy way</string>
    <string name="getStartedSubHeading">Here we will apply some tag line which can we used as a subheading</string>
    <string name="checkInSuccess">Check in Successful</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="noInternetConnectionSubhead">You are not connected to the internet. Make sure your wifi is ON \n Airplane Mode is off and try again</string>
    <string name="enterPassword">Enter Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="changePassword">Change Password</string>
    <string name="passwordDidNotMatch">The password you enter did not match</string>
    <string name="baseUrlServer">https://api.tezzo.fit/%1$s</string>
    <string name="paymentBaseUrl">https://payment.tezzo.fit/%1$s</string>
</resources>
