<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroundColor">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:background="@color/backgroundColor"
            android:orientation="vertical"
            android:padding="10dp">


        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEnterPassword"
                android:background="@drawable/modified_edit_text"
                android:hint="@string/enterPassword"
                android:inputType="textPassword"
                android:padding="20dp" />

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etConfirmPassword"
                android:layout_marginTop="20dp"
                android:background="@drawable/modified_edit_text"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"
                android:padding="20dp" />

        <Button
                android:id="@+id/btnChangePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/modified_rounded_button"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/changePassword"
                android:textColor="@color/colorPrimaryDark" />
        <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/passwordDidNotMatch"
                android:layout_marginTop="10dp"
                android:textColor="#CD0000"
                android:visibility="invisible"
                android:id="@+id/tvPasswordNotMatch"
                android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
            android:id="@+id/tvSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:fontFamily="sans-serif-medium"
            android:gravity="end"
            android:padding="20dp"
            android:text="Skip"
            android:textSize="25sp"

            android:textStyle="bold" />
</FrameLayout>