<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gym_background"
        android:orientation="vertical"
        tools:context=".Activity.LoginActivity">


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:padding="30dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/getStartedHeading"
                android:textColor="@color/colorBlack"
                android:textSize="30dp"
                android:textStyle="bold" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp"
                android:text="@string/getStartedSubHeading"

                android:textSize="15dp" />

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

             android:id="@+id/frameGetStared"
                android:layout_marginTop="60dp"
                android:background="@drawable/modified_button">

            <TextView

                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end|center"
                    android:text="Get Started"
                    android:textColor="@color/colorWhite" />
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:src="@drawable/arrow_right"/>
        </FrameLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/termsAndConditions" />
    </LinearLayout>


</FrameLayout>